# positron-game-engine

./: .clang-format  CMakeLists.txt  LICENSE  README.md  scene.pscn
engine/: CMakeLists.txt
engine/assets/shaders/opengl/: cube.frag  cube.vert  default.frag  depth.vert  new.frag
engine/include/positron/: library.h
engine/include/positron/core/: application.h  event.h  event_bus.h  export.h  game.h  input.h  log.h  window.h
engine/include/positron/ecs/component/: component_storage.h  components.h
engine/include/positron/ecs/core/: ecs.h  entity.h  system.h  world.h
engine/include/positron/ecs/scene/: camera_data.h  light_data.h  mesh_type.h  prefab.h  scene.h  scene_serializer.h
engine/include/positron/ecs/systems/: audio_system.h  physics_system.h  render_system.h
engine/include/positron/renderer/: geometry.h  mesh.h  mesh_factory.h  opengl_renderer.h  renderer.h  shader.h  texture.h
engine/include/positron/renderer/opengl/: buffer_layout.h  gl_context.h  gl_mesh.h  gl_shader.h  gl_texture.h  index_buffer.h  vertex_array.h  vertex_buffer.h
engine/src/: library.cpp
engine/src/core/: application.cpp  event_bus.cpp  input.cpp  log.cpp  window.cpp
engine/src/ecs/: render_system.cpp  scene.cpp
engine/src/ecs/component/: components.cpp
engine/src/ecs/core/: world.cpp
engine/src/ecs/scene/: prefab.cpp  scene.cpp  scene_serializer.cpp
engine/src/ecs/systems/: audio_system.cpp  physics_system.cpp  render_system.cpp
engine/src/renderer/: geometry.cpp  mesh_factory.cpp  opengl_renderer.cpp  renderer.cpp  shader.cpp
engine/src/renderer/opengl/: buffer_layout.cpp  gl_context.cpp  gl_mesh.cpp  gl_shader.cpp  gl_texture.cpp  index_buffer.cpp  vertex_array.cpp  vertex_buffer.cpp
example-game/: CMakeLists.txt
example-game/include/: example_game.h
example-game/include/components/: bouncer_component.h  camera_component.h  spinner_component.h
example-game/include/prefabs/: bouncing_cube_prefab.h  floor_prefab.h  physics_cube_prefab.h  spinning_cube_prefab.h
example-game/include/systems/: bounce_system.h  camera_system.h  spin_system.h
example-game/src/: example_game.cpp  main.cpp
example-game/src/prefabs/: bouncing_cube_prefab.cpp  floor_prefab.cpp  physics_cube_prefab.cpp  spinning_cube_prefab.cpp
example-game/src/systems/: bounce_system.cpp  camera_system.cpp  spin_system.cpp
game/: CMakeLists.txt
game/src/: main.cpp
